--- a/Examples/Base.lproj/Main.storyboard
+++ b/Examples/Base.lproj/Main.storyboard
@@ -81,8 +81,34 @@
                                                     <constraint firstAttribute="height" constant="120" id="uSC-mw-0on"/>
                                                 </constraints>
                                             </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XK-Ga-C4T" userLabel="phone_bg">
+                                                <rect key="frame" x="0.0" y="256" width="414" height="120"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhoneTextField" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gfc-WF-3FH">
+                                                        <rect key="frame" x="0.0" y="8" width="414" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <color key="textColor" systemColor="systemGrayColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R5f-hd-cj8" customClass="PhoneTextField" customModule="AGInputControls">
+                                                        <rect key="frame" x="191" y="36.5" width="32" height="34"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                                <viewLayoutGuide key="safeArea" id="LrX-PM-Rpx"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="120" id="5R6-Bb-fNz"/>
+                                                    <constraint firstItem="R5f-hd-cj8" firstAttribute="centerX" secondItem="Gfc-WF-3FH" secondAttribute="centerX" id="CWh-wA-puP"/>
+                                                    <constraint firstItem="Gfc-WF-3FH" firstAttribute="leading" secondItem="LrX-PM-Rpx" secondAttribute="leading" id="JVS-Vi-hBD"/>
+                                                    <constraint firstItem="R5f-hd-cj8" firstAttribute="top" secondItem="Gfc-WF-3FH" secondAttribute="bottom" constant="8" id="YAm-yh-PIc"/>
+                                                    <constraint firstItem="LrX-PM-Rpx" firstAttribute="trailing" secondItem="Gfc-WF-3FH" secondAttribute="trailing" id="hzY-MS-a6f"/>
+                                                    <constraint firstItem="Gfc-WF-3FH" firstAttribute="top" secondItem="LrX-PM-Rpx" secondAttribute="top" constant="8" id="mPz-Ky-nNF"/>
+                                                </constraints>
+                                            </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Zs-ZU-peS" userLabel="float_bg">
-                                                <rect key="frame" x="0.0" y="256" width="414" height="160"/>
+                                                <rect key="frame" x="0.0" y="384" width="414" height="160"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FloatingLabelTextField without formatting" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TuV-4p-e7m">
                                                         <rect key="frame" x="0.0" y="8" width="414" height="20.5"/>
@@ -109,7 +135,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1tu-ce-tEo" userLabel="float_bg_w_formatting">
-                                                <rect key="frame" x="0.0" y="424" width="414" height="160"/>
+                                                <rect key="frame" x="0.0" y="552" width="414" height="160"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FloatingLabelTextField with formatting" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UMk-pq-H9F">
                                                         <rect key="frame" x="0.0" y="8" width="414" height="20.5"/>
@@ -136,7 +162,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cUF-wv-BcO" userLabel="otp_bg">
-                                                <rect key="frame" x="0.0" y="592" width="414" height="120"/>
+                                                <rect key="frame" x="0.0" y="720" width="414" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OTPCodeTextField" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwB-ev-g31">
                                                         <rect key="frame" x="0.0" y="8" width="414" height="20.5"/>
@@ -159,32 +185,6 @@
                                                     <constraint firstItem="97h-aD-3Z7" firstAttribute="centerX" secondItem="cUF-wv-BcO" secondAttribute="centerX" id="Smn-UX-JDw"/>
                                                     <constraint firstItem="gwB-ev-g31" firstAttribute="leading" secondItem="cUF-wv-BcO" secondAttribute="leading" id="auX-FB-ltr"/>
                                                     <constraint firstItem="gwB-ev-g31" firstAttribute="top" secondItem="cUF-wv-BcO" secondAttribute="top" constant="8" id="sqs-C6-EF5"/>
-                                                </constraints>
-                                            </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XK-Ga-C4T" userLabel="phone_bg">
-                                                <rect key="frame" x="0.0" y="720" width="414" height="120"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhoneTextField" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gfc-WF-3FH">
-                                                        <rect key="frame" x="0.0" y="8" width="414" height="20.5"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <color key="textColor" systemColor="systemGrayColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R5f-hd-cj8" customClass="PhoneTextField" customModule="AGInputControls">
-                                                        <rect key="frame" x="191" y="36.5" width="32" height="34"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
-                                                    </textField>
-                                                </subviews>
-                                                <viewLayoutGuide key="safeArea" id="LrX-PM-Rpx"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="120" id="5R6-Bb-fNz"/>
-                                                    <constraint firstItem="R5f-hd-cj8" firstAttribute="centerX" secondItem="Gfc-WF-3FH" secondAttribute="centerX" id="CWh-wA-puP"/>
-                                                    <constraint firstItem="Gfc-WF-3FH" firstAttribute="leading" secondItem="LrX-PM-Rpx" secondAttribute="leading" id="JVS-Vi-hBD"/>
-                                                    <constraint firstItem="R5f-hd-cj8" firstAttribute="top" secondItem="Gfc-WF-3FH" secondAttribute="bottom" constant="8" id="YAm-yh-PIc"/>
-                                                    <constraint firstItem="LrX-PM-Rpx" firstAttribute="trailing" secondItem="Gfc-WF-3FH" secondAttribute="trailing" id="hzY-MS-a6f"/>
-                                                    <constraint firstItem="Gfc-WF-3FH" firstAttribute="top" secondItem="LrX-PM-Rpx" secondAttribute="top" constant="8" id="mPz-Ky-nNF"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnf-N7-K9W" userLabel="otp_dashes">
@@ -242,12 +242,12 @@
                     </view>
                     <navigationItem key="navigationItem" id="23J-Lq-2ek"/>
                     <connections>
-                        <outlet property="field_1" destination="U12-cx-uta" id="I4c-E3-RXw"/>
-                        <outlet property="field_2" destination="97h-aD-3Z7" id="agT-bi-Bee"/>
                         <outlet property="fixedWidthPhoneField" destination="OZL-W4-6fL" id="tjU-81-2Ex"/>
                         <outlet property="floatTextField" destination="SAD-K4-JCd" id="FZg-Bc-19M"/>
                         <outlet property="floatingFieldNoFormatting" destination="EBj-8I-nur" id="RrO-QC-9Hf"/>
                         <outlet property="lettersField" destination="J9b-2i-JFx" id="Acx-8e-jiY"/>
+                        <outlet property="otpFieldWithAutoWidth" destination="97h-aD-3Z7" id="agT-bi-Bee"/>
+                        <outlet property="otpFieldWithConstrainedWidth" destination="U12-cx-uta" id="I4c-E3-RXw"/>
                         <outlet property="phoneField" destination="R5f-hd-cj8" id="oOV-4Y-gh6"/>
                     </connections>
                 </viewController>
