--- a/Examples/Base.lproj/Main.storyboard
+++ b/Examples/Base.lproj/Main.storyboard
@@ -91,7 +91,10 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R5f-hd-cj8" customClass="PhoneTextField" customModule="AGInputControls">
-                                                        <rect key="frame" x="191" y="36.5" width="32" height="34"/>
+                                                        <rect key="frame" x="8" y="36.5" width="398" height="64"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="64" id="27N-48-iZA"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
@@ -102,8 +105,10 @@
                                                     <constraint firstAttribute="height" constant="120" id="5R6-Bb-fNz"/>
                                                     <constraint firstItem="R5f-hd-cj8" firstAttribute="centerX" secondItem="Gfc-WF-3FH" secondAttribute="centerX" id="CWh-wA-puP"/>
                                                     <constraint firstItem="Gfc-WF-3FH" firstAttribute="leading" secondItem="LrX-PM-Rpx" secondAttribute="leading" id="JVS-Vi-hBD"/>
+                                                    <constraint firstItem="LrX-PM-Rpx" firstAttribute="trailing" secondItem="R5f-hd-cj8" secondAttribute="trailing" constant="8" id="MEs-fu-m6a"/>
                                                     <constraint firstItem="R5f-hd-cj8" firstAttribute="top" secondItem="Gfc-WF-3FH" secondAttribute="bottom" constant="8" id="YAm-yh-PIc"/>
                                                     <constraint firstItem="LrX-PM-Rpx" firstAttribute="trailing" secondItem="Gfc-WF-3FH" secondAttribute="trailing" id="hzY-MS-a6f"/>
+                                                    <constraint firstItem="R5f-hd-cj8" firstAttribute="leading" secondItem="LrX-PM-Rpx" secondAttribute="leading" constant="8" id="mI8-9Y-F6I"/>
                                                     <constraint firstItem="Gfc-WF-3FH" firstAttribute="top" secondItem="LrX-PM-Rpx" secondAttribute="top" constant="8" id="mPz-Ky-nNF"/>
                                                 </constraints>
                                             </view>
@@ -242,13 +247,13 @@
                     </view>
                     <navigationItem key="navigationItem" id="23J-Lq-2ek"/>
                     <connections>
-                        <outlet property="fixedWidthPhoneField" destination="OZL-W4-6fL" id="tjU-81-2Ex"/>
+                        <outlet property="adaptiveWidthPhoneField" destination="OZL-W4-6fL" id="tjU-81-2Ex"/>
+                        <outlet property="fixedWidthPhoneField" destination="R5f-hd-cj8" id="oOV-4Y-gh6"/>
                         <outlet property="floatTextField" destination="SAD-K4-JCd" id="FZg-Bc-19M"/>
                         <outlet property="floatingFieldNoFormatting" destination="EBj-8I-nur" id="RrO-QC-9Hf"/>
                         <outlet property="lettersField" destination="J9b-2i-JFx" id="Acx-8e-jiY"/>
                         <outlet property="otpFieldWithAutoWidth" destination="97h-aD-3Z7" id="agT-bi-Bee"/>
                         <outlet property="otpFieldWithConstrainedWidth" destination="U12-cx-uta" id="I4c-E3-RXw"/>
-                        <outlet property="phoneField" destination="R5f-hd-cj8" id="oOV-4Y-gh6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -287,16 +292,16 @@
             <color red="0.7839999794960022" green="0.81199997663497925" blue="0.91299998760223389" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="secondarySystemBackgroundColor">
-            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGrayColor">
-            <color red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGroupedBackgroundColor">
-            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
