--- a/Examples/Base.lproj/Main.storyboard
+++ b/Examples/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="92" width="414" height="770"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XYD-44-ltN">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="968"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="988"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QQG-4o-0Dp" userLabel="letters">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
@@ -140,7 +140,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1tu-ce-tEo" userLabel="float_bg_w_formatting">
-                                                <rect key="frame" x="0.0" y="552" width="414" height="160"/>
+                                                <rect key="frame" x="0.0" y="552" width="414" height="180"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FloatingLabelTextField with formatting" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UMk-pq-H9F">
                                                         <rect key="frame" x="0.0" y="8" width="414" height="20.5"/>
@@ -153,6 +153,11 @@
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
+                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sJG-EL-kl3" customClass="FormattingTextField" customModule="AGInputControls">
+                                                        <rect key="frame" x="8" y="96" width="32" height="34"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
                                                 </subviews>
                                                 <viewLayoutGuide key="safeArea" id="lV9-kH-fom"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -162,12 +167,14 @@
                                                     <constraint firstItem="UMk-pq-H9F" firstAttribute="leading" secondItem="lV9-kH-fom" secondAttribute="leading" id="VLj-2l-E1W"/>
                                                     <constraint firstItem="UMk-pq-H9F" firstAttribute="top" secondItem="lV9-kH-fom" secondAttribute="top" constant="8" id="adg-8m-k1H"/>
                                                     <constraint firstItem="SAD-K4-JCd" firstAttribute="leading" secondItem="UMk-pq-H9F" secondAttribute="leading" constant="8" id="cfO-pw-2mM"/>
-                                                    <constraint firstAttribute="height" constant="160" id="mJq-OB-c4O"/>
+                                                    <constraint firstAttribute="height" constant="180" id="mJq-OB-c4O"/>
+                                                    <constraint firstItem="sJG-EL-kl3" firstAttribute="leading" secondItem="SAD-K4-JCd" secondAttribute="leading" id="reo-iy-4x4"/>
+                                                    <constraint firstItem="sJG-EL-kl3" firstAttribute="top" secondItem="SAD-K4-JCd" secondAttribute="bottom" constant="19" id="tW8-b8-hSn"/>
                                                     <constraint firstItem="SAD-K4-JCd" firstAttribute="trailing" secondItem="UMk-pq-H9F" secondAttribute="trailing" constant="-8" id="wBo-A4-E6p"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cUF-wv-BcO" userLabel="otp_bg">
-                                                <rect key="frame" x="0.0" y="720" width="414" height="120"/>
+                                                <rect key="frame" x="0.0" y="740" width="414" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OTPCodeTextField" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwB-ev-g31">
                                                         <rect key="frame" x="0.0" y="8" width="414" height="20.5"/>
@@ -193,7 +200,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnf-N7-K9W" userLabel="otp_dashes">
-                                                <rect key="frame" x="0.0" y="848" width="414" height="120"/>
+                                                <rect key="frame" x="0.0" y="868" width="414" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OTPCodeTextField fixed dimentions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y8i-YP-3kF">
                                                         <rect key="frame" x="0.0" y="8" width="414" height="20.5"/>
@@ -248,6 +255,7 @@
                     <navigationItem key="navigationItem" id="23J-Lq-2ek"/>
                     <connections>
                         <outlet property="adaptiveWidthPhoneField" destination="OZL-W4-6fL" id="tjU-81-2Ex"/>
+                        <outlet property="expirationDateField" destination="sJG-EL-kl3" id="A3b-Hf-kAQ"/>
                         <outlet property="fixedWidthPhoneField" destination="R5f-hd-cj8" id="oOV-4Y-gh6"/>
                         <outlet property="floatTextField" destination="SAD-K4-JCd" id="FZg-Bc-19M"/>
                         <outlet property="floatingFieldNoFormatting" destination="EBj-8I-nur" id="RrO-QC-9Hf"/>
